--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "serve": "live-server public/",
     "build": "webpack",
-    "dev-server": "google-chrome -a 'http://localhost:8080' && webpack-dev-server",
+    "dev-server": "webpack-dev-server --open",
     "test": "jest",
     "test-watch": "jest --watchAll"
   },
@@ -21,10 +21,8 @@
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.3",
     "babel-loader": "^8.0.4",
-    "babel-plugin-transform-class-properties": "^6.24.1",
-    "babel-plugin-transform-object-rest-spread": "^6.26.0",
-    "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
+    "cleave.js": "^1.4.7",
     "css-loader": "^2.0.0",
     "dev-server": "^0.0.2",
     "live-server": "^1.2.1",
@@ -36,6 +34,7 @@
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "redux": "^4.0.1",
+    "redux-thunk": "^2.3.0",
     "run": "^1.4.0",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
