--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "redux-thunk": "^2.3.0",
     "run": "^1.4.0",
     "sass-loader": "^7.1.0",
+    "send": "^0.16.2",
     "style-loader": "^0.23.1",
     "webpack": "^4.27.1",
     "webpack-cli": "^3.1.2",
