--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "yoni",
+  "name": "elefend-client",
   "version": "1.0.0",
-  "description": "financial checkup app",
+  "description": "Elefend front-end app",
   "main": "index.js",
   "repository": "git@github.com:Royshell/financial-checkup.git",
   "author": "<roy.shell5@gmail.com>",
@@ -17,8 +17,10 @@
   "dependencies": {
     "@babel/core": "^7.2.0",
     "@babel/plugin-proposal-class-properties": "^7.2.1",
+    "@babel/plugin-transform-runtime": "^7.6.0",
     "@babel/preset-env": "^7.2.0",
     "@babel/preset-react": "^7.0.0",
+    "@babel/runtime": "^7.6.0",
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.3",
     "babel-loader": "^8.0.4",
@@ -31,11 +33,8 @@
     "normalize.css": "^8.0.1",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
-    "react-redux": "^6.0.0",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
-    "redux": "^4.0.1",
-    "redux-thunk": "^2.3.0",
     "run": "^1.4.0",
     "sass-loader": "^7.1.0",
     "send": "^0.16.2",
