--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@babel/preset-env": "^7.2.0",
     "@babel/preset-react": "^7.0.0",
     "@babel/runtime": "^7.6.0",
+    "@cleandersonlobo/react-mic": "^1.1.1",
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.3",
     "babel-loader": "^8.0.4",
@@ -29,15 +30,16 @@
     "cleave.js": "^1.4.7",
     "css-loader": "^2.0.0",
     "dev-server": "^0.0.2",
+    "less": "^3.10.3",
+    "less-loader": "^5.0.0",
     "live-server": "^1.2.1",
-    "node-sass": "^4.11.0",
     "normalize.css": "^8.0.1",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
+    "react-mic": "^12.4.1",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "run": "^1.4.0",
-    "sass-loader": "^7.1.0",
     "send": "^0.16.2",
     "style-loader": "^0.23.1",
     "webpack": "^4.27.1",
