--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "build": "webpack",
     "build-prod": "webpack --mode=production",
     "dev-server": "webpack-dev-server --open",
+    "predev-server": "npm run build",
     "test": "jest",
     "test-watch": "jest --watchAll"
   },
@@ -27,6 +28,7 @@
     "babel-core": "^6.26.3",
     "babel-loader": "^8.0.4",
     "babel-preset-react": "^6.24.1",
+    "canvasjs": "^1.8.1",
     "cleave.js": "^1.4.7",
     "css-loader": "^2.0.0",
     "dev-server": "^0.0.2",
